--- a/src/component/infoBox/style.scss
+++ b/src/component/infoBox/style.scss
@@ -1,8 +1,9 @@
 .info-box {
-    width: 280px;
+    width: 20%;
     background-color: white;
     padding: 5px;
     height: 100%;
+    z-index: 2;
     &-content {
         .search-box {
             box-shadow: 0px 0px 2px #00000052;
